<refactor>
make +2 cards stack